fini la page travaux !

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,11 +56,6 @@ h1 {
           transform: rotate(-180deg);
 }
 
-.pause {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-}
-
 .nav {
   height: 75px;
   width: 100vw;
@@ -1413,6 +1408,122 @@ h1 {
 .typeform_link:hover {
   -webkit-box-shadow: 0px 15px 15px 0px rgba(47, 128, 237, 0.5);
           box-shadow: 0px 15px 15px 0px rgba(47, 128, 237, 0.5);
+}
+
+.projects {
+  margin-top: 5rem;
+}
+
+.projects h1 {
+  margin: 0;
+  font-size: 4.5rem;
+}
+
+.works {
+  margin-top: 5rem;
+}
+
+.my_works {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+  grid-auto-flow: row;
+}
+
+.projet {
+  height: 60vh;
+}
+
+.projet a {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #000;
+  text-decoration: none;
+}
+
+.projet_details {
+  margin-top: auto;
+  height: 40%;
+  font-family: "Moderat Regular";
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.725rem;
+  position: relative;
+}
+
+.projet_details::before {
+  position: absolute;
+  top: -5rem;
+  left: 0;
+}
+
+.projet_details h2 {
+  font-family: "Moderat Bold";
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 2.75rem;
+  margin: 0;
+}
+
+.ux_projet .projet_details::before {
+  content: url(/img/emoji/ok.png);
+}
+
+.transmedia_projet .projet_details::before {
+  content: url(/img/emoji/rocket.png);
+}
+
+.design_projet .projet_details::before {
+  content: url(/img/emoji/yeah.png);
+}
+
+.illu_projet .projet_details::before {
+  content: url(/img/emoji/chocolate_2.png);
+}
+
+.thumbnail {
+  width: 100%;
+  height: 40%;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.25);
+}
+
+.transmedia_projet .thumbnail {
+  background-image: url(/img/content/amal_cover.jpg);
+  background-position: 0% 80%;
+}
+
+.ux_projet .thumbnail {
+  background-image: url(/img/content/playzone_photo3.png);
+}
+
+.design_projet .thumbnail {
+  background-image: url(/img/content/tag_cover.png);
+}
+
+.illu_projet .thumbnail {
+  background-image: url(/img/content/vector_2.png);
 }
 
 .footer {
