--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -32,13 +32,10 @@ h1{
     transform: rotate(-180deg);
 }
 
-.pause{
-    animation-play-state: paused;
-}
-
 
 @import '_nav.scss';
 @import '_social.scss';
 @import '_main.scss';
 @import '_about.scss';
+@import '_work.scss';
 @import '_footer.scss';
