--- a/styles/scss/_nav.scss
+++ b/styles/scss/_nav.scss
@@ -50,6 +50,11 @@
             background-image: url(/img/icons/chevron.svg);
             background-repeat: no-repeat;
             background-position: center;
+            transition: all .5s;
+        }
+
+        &:hover::after{
+            transform: rotate(-180deg);
         }
     }
     li:last-child{
