--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -29,6 +29,13 @@
     font-size: 3em;
 }
 
+/*Case study center*/
+@mixin case_center {
+    width: 40vw;
+    margin: 0 auto;
+    margin-top: 10rem;
+}
+
 /*Couleurs*/
 $black: #000;
 $white: #fff;
