--- a/styles/scss/_showcase.scss
+++ b/styles/scss/_showcase.scss
@@ -43,6 +43,18 @@
         flex-direction: column;
         width: 350px;
 
+        &:hover span{
+            color: $accent;
+            font-weight: 700;
+        }
+
+        &:hover p::before{
+            animation-name: slide;
+            animation-duration: .5s;
+            animation-timing-function: linear;
+            animation-iteration-count: 1;
+        }
+
         p{
             position: relative;
             margin: 0;
@@ -71,6 +83,7 @@
         text-align: right;
         justify-content: flex-end;
 
+
         p{
             &::before{
                 content: "";
@@ -79,16 +92,22 @@
             }
             &::after{
                 content: "";
-                background-image: url(/img/icons/arrow.svg);
+                background-image: url(/img/icons/arrow2.svg);
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
-                transform: rotate(180deg);
                 width: 32px;
                 height: 15px;
                 display: inline-block;
                 margin-left: 1rem;
             }
+        }
+
+        &:hover p::after{
+            animation-name: slide2;
+            animation-duration: .5s;
+            animation-timing-function: linear;
+            animation-iteration-count: 1;
         }
     }
 }
@@ -192,7 +211,7 @@
     }
 }
 
-.ux_case_study, .design_case_study, .illu_case_study{
+.ux_case_study, .illu_case_study{
     @include case_center;
 }
 
@@ -392,7 +411,7 @@
 
     li{
         background-color: $white;
-        box-shadow: 0px 15px 15px 0px rgba($color: #000000, $alpha: .25);
+        box-shadow: $shadow;
         border-radius: 5px;
         height: 150px;
         margin-bottom: 3rem;
@@ -430,7 +449,7 @@
     width: 40vw;
 
     img{
-        box-shadow: 0px 15px 15px 0px rgba($color: #000000, $alpha: .25);
+        box-shadow: $shadow;
         border-radius: 5px;
     }
 }
@@ -465,6 +484,11 @@
         font-size: 1.125rem;
         margin: 0;
     }
+
+    &:hover::before{
+        transform: scale(1.3);
+        border-radius: 45px;
+    }
 }
 
 .color::before{
@@ -478,6 +502,7 @@
     position: absolute;
     left: calc(50% - 45px);
     top: -7rem;
+    transition: all .5s;
 }
 
 .color:nth-of-type(2)::before{
@@ -513,4 +538,121 @@
         display: block;
         margin-top: 5rem;
     }
+}
+
+/*-----ILLU WEB SHOWCASE-----*/
+
+.bref em{
+    font-weight: 700;
+}
+
+.showcase{
+    margin: 0 -10rem;
+}
+
+.illustration{
+    width: 100%;
+    box-shadow: $shadow;
+    border-radius: 5px;
+    margin-bottom: 3rem;
+    transition: all .5s;
+
+    &:hover{
+        transform: scale(1.05);
+    }
+}
+
+.more{
+    box-shadow: $shadow;
+    border-radius: 5px;
+    width: 20vw;
+    padding: 5rem 3rem;
+
+    h4{
+        font-size: 2.25rem;
+        margin: 0;
+        margin-bottom: 3rem;
+    }
+
+    a{
+        @include ModeratBold;
+        font-size: 1.125rem;
+        color: $white;
+        text-decoration: none;
+        background-color: $bleu;
+        padding: 1rem 2rem;
+        border-radius: 2rem;
+        transition: all .5s;
+
+        &::after{
+            content: url(/img/icons/external_link_white.svg);
+            margin-left: .5rem;
+        }
+        &:hover{
+            box-shadow: 0px 15px 15px 0px rgba(47, 128, 237, 0.50);
+        }
+    }
+}
+
+/*-----TAGGING SHOWCASE-----*/
+
+.design_case_study .bref, .design_case_study .behance{
+    @include case_center;
+}
+
+.tagging{
+    @include case_center;
+    margin-top: 0;
+}
+
+.tag_showcase{
+    overflow-x: hidden;
+    position: relative;
+}
+
+/*-----TRANSMEDIA CASE STUDY-----*/
+
+.synopsis, .intention, .audience, .amal_en_pratique{
+    @include case_center;
+}
+
+.amal_schemas{
+    width: 80vw;
+    margin: 0 auto;
+
+    img{
+        width: 100%;
+        margin-bottom: 5rem;
+        border-radius: 10px;
+        box-shadow: $shadow;
+        transition: all .5s;
+
+        &:hover{
+            transform: scale(1.01);
+        }
+    }
+}
+
+.amal_illu_grid{
+    width: 60vw;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: row;
+    grid-gap: 30px;
+
+    img{
+        width: 100%;
+        border-radius: 5px;
+        box-shadow: $shadow;
+        transition: all .5s;
+
+        &:hover{
+            transform: scale(1.1);
+        }
+    }
+}
+
+.transmedia_case_study .users{
+    width: 40%;
 }
