--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -43,3 +43,4 @@ $accent: #DC7855;
 $accenttransparent: rgba($accent, .9);
 $bleu: #2F80ED;
 $gris: #F2F2F2;
+$shadow: 0px 15px 15px 0 rgba($black, .25);
