--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -48,7 +48,7 @@
         top: calc(50% - 180px);
         right: 10em;
         border-radius: 5px;
-        box-shadow: 0px 15px 15px 0px rgba($color: #000000, $alpha: .25);
+        box-shadow: $shadow;
     }
 }
 
@@ -193,7 +193,7 @@
         &:hover{
             transform: scale(1.2);
             border-radius: 5px;
-            box-shadow: 0px 15px 15px 0px rgba($color: #000000, $alpha: .25);
+            box-shadow: $shadow;
         }
     }
 }
