--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -415,7 +415,7 @@
     li{
         border-radius: 5px;
         background-color: $white;
-        box-shadow: 0px 10px 15px 0px rgba($color: #000000, $alpha: .25);
+        box-shadow: $shadow;
     }
 }
 
