--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,12 +1,14 @@
 @import '_variables.scss';
-*{
+:root{
     user-select: none;
+    scroll-behavior: smooth;
 }
 body{
     font-size: 10pt;
     margin: 0;
     padding: 0;
     padding-top: 75px;
+    scroll-behavior: smooth;
 }
 
 .container{
@@ -32,6 +34,70 @@ h1{
     transform: rotate(-180deg);
 }
 
+@keyframes slide{
+    0%{
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateX(10px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+@keyframes slide2{
+    0%{
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateX(-10px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+.go_top{
+    position: fixed;
+    scroll-behavior: smooth;
+    top: 85vh;
+    left: 95vw;
+    bottom: 2rem;
+    width: 60px;
+    height: 60px;
+    background-color: $gris;
+    border-radius: 30px;
+    box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: .1);
+}
+
+.top{
+    position: fixed;
+    scroll-behavior: smooth;
+    top: 85vh;
+    left: 95vw;
+    bottom: 2rem;
+    width: 60px;
+    height: 60px;
+    background-color: #f1f1f1;
+    border-radius: 30px;
+    box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: .1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-behavior: smooth;
+    transition: all .5s;
+    z-index: 999;
+
+    &:hover{
+        transform: scale(1.2);
+    }
+
+    &::after{
+        content: url(/img/icons/chevron.svg);
+        transform: scale(1.2) scaleY(-1);
+    }
+}
 
 @import '_nav.scss';
 @import '_social.scss';
