--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,12 @@
 /*Style H2*/
 /*Case study center*/
 /*Couleurs*/
-* {
+:root {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
   margin: 0;
   padding: 0;
   padding-top: 75px;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -55,6 +57,118 @@ h1 {
 .rotate {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
+}
+
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  50% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes slide {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  50% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes slide2 {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  50% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes slide2 {
+  0% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  50% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+.go_top {
+  position: fixed;
+  scroll-behavior: smooth;
+  top: 85vh;
+  left: 95vw;
+  bottom: 2rem;
+  width: 60px;
+  height: 60px;
+  background-color: #F2F2F2;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.top {
+  position: fixed;
+  scroll-behavior: smooth;
+  top: 85vh;
+  left: 95vw;
+  bottom: 2rem;
+  width: 60px;
+  height: 60px;
+  background-color: #f1f1f1;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  scroll-behavior: smooth;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  z-index: 999;
+}
+
+.top:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.top::after {
+  content: url(/img/icons/chevron.svg);
+  -webkit-transform: scale(1.2) scaleY(-1);
+          transform: scale(1.2) scaleY(-1);
 }
 
 .nav {
@@ -762,8 +876,8 @@ h1 {
 .pro_blocks li {
   border-radius: 5px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
 }
 
 .pro_title {
@@ -1016,8 +1130,8 @@ h1 {
   top: calc(50% - 180px);
   right: 10em;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
 }
 
 .citation {
@@ -1177,8 +1291,8 @@ h1 {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
   border-radius: 5px;
-  -webkit-box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
 }
 
 @-webkit-keyframes move {
@@ -1605,6 +1719,22 @@ h1 {
   width: 350px;
 }
 
+.second_nav a:hover span {
+  color: #DC7855;
+  font-weight: 700;
+}
+
+.second_nav a:hover p::before {
+  -webkit-animation-name: slide;
+          animation-name: slide;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+}
+
 .second_nav a p {
   position: relative;
   margin: 0;
@@ -1647,16 +1777,25 @@ h1 {
 
 .second_nav a:last-of-type p::after {
   content: "";
-  background-image: url(/img/icons/arrow.svg);
+  background-image: url(/img/icons/arrow2.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
   width: 32px;
   height: 15px;
   display: inline-block;
   margin-left: 1rem;
+}
+
+.second_nav a:last-of-type:hover p::after {
+  -webkit-animation-name: slide2;
+          animation-name: slide2;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
 }
 
 .case_type {
@@ -1771,7 +1910,7 @@ h1 {
   font-style: normal;
 }
 
-.ux_case_study, .design_case_study, .illu_case_study {
+.ux_case_study, .illu_case_study {
   width: 40vw;
   margin: 0 auto;
   margin-top: 10rem;
@@ -1988,8 +2127,8 @@ h1 {
 
 .processus li {
   background-color: #fff;
-  -webkit-box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   height: 150px;
   margin-bottom: 3rem;
@@ -2035,8 +2174,8 @@ h1 {
 }
 
 .wireframe img {
-  -webkit-box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
   border-radius: 5px;
 }
 
@@ -2074,6 +2213,12 @@ h1 {
   margin: 0;
 }
 
+.color:hover::before {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  border-radius: 45px;
+}
+
 .color::before {
   content: "";
   width: 90px;
@@ -2086,6 +2231,8 @@ h1 {
   position: absolute;
   left: calc(50% - 45px);
   top: -7rem;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
 .color:nth-of-type(2)::before {
@@ -2124,6 +2271,142 @@ h1 {
   margin: 0 auto;
   display: block;
   margin-top: 5rem;
+}
+
+/*-----ILLU WEB SHOWCASE-----*/
+.bref em {
+  font-weight: 700;
+}
+
+.showcase {
+  margin: 0 -10rem;
+}
+
+.illustration {
+  width: 100%;
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  margin-bottom: 3rem;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.illustration:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.more {
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  width: 20vw;
+  padding: 5rem 3rem;
+}
+
+.more h4 {
+  font-size: 2.25rem;
+  margin: 0;
+  margin-bottom: 3rem;
+}
+
+.more a {
+  font-family: "Moderat Bold";
+  font-weight: 700;
+  font-size: 1.125rem;
+  color: #fff;
+  text-decoration: none;
+  background-color: #2F80ED;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.more a::after {
+  content: url(/img/icons/external_link_white.svg);
+  margin-left: .5rem;
+}
+
+.more a:hover {
+  -webkit-box-shadow: 0px 15px 15px 0px rgba(47, 128, 237, 0.5);
+          box-shadow: 0px 15px 15px 0px rgba(47, 128, 237, 0.5);
+}
+
+/*-----TAGGING SHOWCASE-----*/
+.design_case_study .bref, .design_case_study .behance {
+  width: 40vw;
+  margin: 0 auto;
+  margin-top: 10rem;
+}
+
+.tagging {
+  width: 40vw;
+  margin: 0 auto;
+  margin-top: 10rem;
+  margin-top: 0;
+}
+
+.tag_showcase {
+  overflow-x: hidden;
+  position: relative;
+}
+
+/*-----TRANSMEDIA CASE STUDY-----*/
+.synopsis, .intention, .audience, .amal_en_pratique {
+  width: 40vw;
+  margin: 0 auto;
+  margin-top: 10rem;
+}
+
+.amal_schemas {
+  width: 80vw;
+  margin: 0 auto;
+}
+
+.amal_schemas img {
+  width: 100%;
+  margin-bottom: 5rem;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.amal_schemas img:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+}
+
+.amal_illu_grid {
+  width: 60vw;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: row;
+  grid-gap: 30px;
+}
+
+.amal_illu_grid img {
+  width: 100%;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 15px 0 rgba(0, 0, 0, 0.25);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.amal_illu_grid img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.transmedia_case_study .users {
+  width: 40%;
 }
 
 .footer {
@@ -2229,7 +2512,11 @@ h1 {
   height: 5px;
   display: block;
   position: absolute;
-  border-bottom: 2px solid #000;
+  border-bottom: 3px solid #000;
+}
+
+.mail:hover {
+  color: #000;
 }
 
 .typeform_link {
@@ -2307,6 +2594,12 @@ h1 {
   display: block;
   margin-top: 2.5em;
   font-style: normal;
+}
+
+.location a:hover {
+  color: #000;
+  font-family: "Moderat Bold";
+  font-weight: 700;
 }
 
 .footer_credits {
