--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -12,7 +12,7 @@ body{
 }
 
 .container{
-    width: 1440px;
+    width: 1366px;
     display: block;
     margin: 0 auto;
 }
@@ -82,9 +82,6 @@ h1{
     background-color: #f1f1f1;
     border-radius: 30px;
     box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: .1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     scroll-behavior: smooth;
     transition: all .5s;
     z-index: 999;
@@ -96,8 +93,14 @@ h1{
     &::after{
         content: url(/img/icons/chevron.svg);
         transform: scale(1.2) scaleY(-1);
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
+
 
 @import '_nav.scss';
 @import '_social.scss';
