--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .container {
-  width: 1440px;
+  width: 1366px;
   display: block;
   margin: 0 auto;
 }
@@ -145,15 +145,6 @@ h1 {
   border-radius: 30px;
   -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   scroll-behavior: smooth;
   -webkit-transition: all .5s;
   transition: all .5s;
@@ -169,6 +160,17 @@ h1 {
   content: url(/img/icons/chevron.svg);
   -webkit-transform: scale(1.2) scaleY(-1);
           transform: scale(1.2) scaleY(-1);
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav {
